# openenv-email

./: Dockerfile  README.md  app.py  inference.py  logs.txt  openenv.yaml  pyproject.toml  requirements.txt  run.py
app/: env.py  grader.py  logger.py  models.py  server.py
app/tasks/: task_easy.py  task_hard.py  task_medium.py
server/: app.py
