[project]
name = "openenv-email"
version = "0.1.0"
description = "OpenEnv Email Task Environment"
authors = [{ name = "Akshay" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "transformers",
    "torch",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
